--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -127,7 +127,7 @@
             .productList
               = link_to product_path(product.id), class: "productListimg" do
                 %figure.productList--img
-                  = image_tag Image.find(product.id).src.url, class: "productImage"
+                  = image_tag Image.find_by(product_id: product.id).src.url, class: "productImage"
                 .productList--body
                   %h3.name
                     = product.name
@@ -140,6 +140,6 @@
                         0
                     %p (税込)
 = render "footer"
-= link_to "#", class: "sellBtn" do
+= link_to new_product_path, class: "sellBtn" do
   %span.sellBtn__text 出品する
   = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
