--- a/app/assets/stylesheets/modules/_show_users.scss
+++ b/app/assets/stylesheets/modules/_show_users.scss
@@ -1,114 +1,181 @@
-.header {
-  padding: 0 60px;
-  &__inside {
-    max-width: 1040px;
-    width: 100%;
-    min-height: 82px;
-    margin: 0 auto;
-    padding: 15px 0 0;
-    &--main {
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding: 3px 0 0 0;
-      &__logo {
-        width: 140px;
-        font-size: 25px;
-        height: 30px;
-        padding-bottom: 10px;
-        margin-right: 30px;
-        border-radius: 4px;
-      }
-      &__box {
-        width: 70%;
-        height: 36px;
-        padding: 0 0 0 5px;
-      }
-      &__botan {
-        width: 10%;
+.Mypage-header{
+  position: relative;
+  border-top: 1px solid #eee;
+  .bread-crumbs{
+    height: 55px;
+    position: relative;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
+    background: #fff;
+    z-index: 1;
+    display: flex;
+    .Itemscop{
+      width: 1020px;
+      margin: 0 auto;
+      padding: 16px 0;
+      font-size: 14px;
+      .bread-crumbs-item{
+        display: inline-block;
+        margin-left: 8px;
+        .unit{
+          text-decoration: none;
+          color: black;
+        }
       }
     }
   }
 }
-.mypage {
-  margin: 40px auto 0;
-  width: 1020px;
-  display: flex;
-  &__list {
-    float: left;
-    width: 280px;
-    margin: 0 40px 0px 60px;
-    &--navi {
-      list-style: none;
-      .mypage-nav-list-item {
-        position: relative;
-        min-height: 30px;
+
+.Mypage-main{
+  background: #f5f5f5;
+  .Mypage-main-content{
+    font-size: 14px;
+    background: #f5f5f5;
+    height: 1580px;
+    margin: 40px auto 0;
+    width: 1020px;
+    position: relative;
+    .l-content{
+      width: 670px;
+      position: absolute;
+      right: 0px;
+      .mypage-user-icon{
+        height: 200px;
+        margin-top: 0px;
+        background-color: #3CCACE;
+        .background{
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          .icon{
+            width: 50px;
+            margin-top: 50px;
+          }
+        }
+        .user-name{
+          display: flex;
+          justify-content: center;
+          margin: 5px;
+        }
+        .mypage-number{
+          display: flex;
+          justify-content: center;
+          div{
+            margin: 5px 5px;
+          }
+        }
+      }
+      .mypage-tab{
         background: #fff;
-        font-size: 14px;
-        color: #333;
-        border: solid;
-        border-color: rgb(230, 225, 225);
-        width: 200px;
-        text-align: center;
-        text-decoration: none;
-        justify-content: center;
-        align-items: center;
-        height: 5px;
         display: flex;
-        border-width: 1px;
+        .mypage-tab-container{
+          background: #eee;
+          width: 50%;
+          height: 60px;
+          font-size: 18px;
+          font-weight: bold;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: 1px solid #3CCACE;
+        }
+      }
+      .mypage-container{
+        margin: 40px 0 0;
+        background: #fff;
+        .mypage-tab-head{
+          padding: 0 16px;
+          height: 80px;
+          border-bottom: 1px solid #3CCACE;
+          font-size: 20px;
+          display: flex;
+          align-items: center;
+        }
+        .mypage-tabs{
+          display: flex;
+          .active{
+            background: #fff;
+            width: 50%;
+            height: 60px;
+            font-size: 18px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+          li{
+            background: #eee;
+            width: 50%;
+            height: 60px;
+            font-size: 18px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+        .tab-content{
+          height: 200px;
+          padding: 10px;
+        }
+      }
+      .l-chapter-container{
+        background: #fff;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .session{
+          background: #3CCACE;
+          border: 1px solid #3CCACE;
+          color: #fff;
+          height: 60px;
+          width: 300px;
+          margin: 10px auto;
+          border-radius: 6px;
+          display: block;
+          text-decoration: none;
+          padding: 15px 100px;
+          font-size: 16px;
+        }
       }
     }
   }
+}
 
-  &__bord {
-    float: right;
-    height: auto;
-    width: 700px;
-    &--user {
-      text-align: center;
-      height: 50%;
-      background-color:  #3CCACE;
-      position: relative;
-      &__name {
-        font-size: large;
-        white-space: nowrap;
-        text-align: center;
-        margin: 0 auto;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        width: 80%;
-        height: 3.2rem;
-        
-      }
-    }
-    &--item {
-      text-align: left;
-      padding: 0 20px;
-      line-height: 72px;
-      background-color: rgb(248, 245, 245);
-    }
-    &--now {
-      display: block;
-      display: flex;
-      justify-content: space-around;
-      background-color: #3ccace;
-      &__info {
+.l-side{
+  margin: 0px auto 0;
+  &__list{
+    float: left;
+    width: 280px;
+    margin: 0 40px 0 0;
+    .mypage-nav{
+      .mypage-nav-list{
         display: block;
-        &--mains {
-          font-size: 22px;
-          color: rgb(248, 245, 245);
-          &__forms {
-            display: block;
-            color: #333;
-            font-size: 16px;
-            line-height: 72px;
-            color: white;
+        .mypage-nav{
+          display: list-item;
+          border-bottom: 1px solid #eee;
+          position: relative;
+          display: block;
+          min-height: 40px;
+          padding: 14px;
+          background: #fff;
+          font-size: 14px;
+          color: #333;
+          text-decoration: none;
+          .mypage-nav-list-item{
+            i{
+              position: absolute;
+              top: 50%;
+              right: 16px;
+              color: black;
+            }
           }
         }
+      }
+      .mypage-nav-head{
+        font-weight: bold;
+        margin: 40px 0 5px;
+        font-size: 16px;
       }
     }
   }
