--- a/app/assets/stylesheets/modules/_products.scss
+++ b/app/assets/stylesheets/modules/_products.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 //toShare
@@ -44,7 +45,6 @@
   right: 32px;
   position: fixed;
   padding: 15px;
-  text-decoration: none;
   &__text {
     color: #fff;
     display: block;
@@ -100,7 +100,6 @@ li {
   padding: 10px 5px;
   border-bottom: 1px solid lightgray;
   color: black;
-  text-decoration: none;
 }
 
 .parent_category:hover {
@@ -112,7 +111,6 @@ li {
   padding: 8px 5px;
   border-bottom: 1px solid lightgray;
   color: black;
-  text-decoration: none;
 }
 
 .child_category:hover {
@@ -124,7 +122,6 @@ li {
   padding: 7px 5px;
   border-bottom: 1px solid lightgray;
   color: black;
-  text-decoration: none;
 }
 
 .grand_child_category:hover {
@@ -146,9 +143,7 @@ li {
   padding: 10px 3px;
   border-bottom: 1px solid lightgray;
 }
-li:hover {
-  @include mainBgColor;
-}
+
 
 
 //topbar
@@ -202,7 +197,6 @@ li:hover {
     &--left {
       display:flex;
       .top-category {
-        text-decoration: none;
         color: black;
         margin-right: 40px;
       }
@@ -210,7 +204,6 @@ li:hover {
         @include hoverColor;
       }
       .top-brand {
-        text-decoration: none;
         color: black;
       }
       .top-brand:hover  {
@@ -220,11 +213,9 @@ li:hover {
     &--right {
       display: flex;
       .top-login {
-        text-decoration: none;
         color: black;
       }
       .top-newResister {
-        text-decoration: none;
         color: black;
         margin-left: 30px;
       }
@@ -434,12 +425,15 @@ li:hover {
         height: 95px;
         width:100%;
         padding:16px;
+        color: black;
         .price {
           display:flex;
           justify-content: space-between;
+          color: black;
         }
         .tax {
           font-size: 10px;
+          color: black;
         }
       }
     }
@@ -452,7 +446,7 @@ li:hover {
 
 .mainBrand {
   background-color: #f8f8f8;
-  padding-top: 100px;
+  padding-top: 200px;
   padding-bottom: 100px;
 
   &__title {
@@ -484,12 +478,15 @@ li:hover {
         height: 95px;
         width:100%;
         padding:16px;
+        color: black;
         .price {
           display:flex;
           justify-content: space-between;
+          color: black;
         }
         .tax {
           font-size: 10px;
+          color: black;
         }
       }
     }
@@ -547,7 +544,6 @@ li:hover {
       }
       &__text {
         color: #fff;
-        text-decoration: none;
         font-size: 12px;
         line-height: 32px;
       }
