--- a/app/views/products/_main.html.haml
+++ b/app/views/products/_main.html.haml
@@ -65,109 +65,44 @@
 
 .mainCategory
   .mainCategory__title
-    ピックアップカテゴリー
+    投稿商品一覧
   .mainCategory__sub
     新規投稿商品
   .mainCategory__wrapper
-    .Products
-      = link_to image_tag("/material/pict/pict-reason-01.jpg", class:"CategoryPic"), "products/show"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "CategoryPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "CategoryPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "CategoryPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
+    - @product_array.first(4).each do |product|
+      = link_to product_path(product) do
+        .Products
+          = image_tag Image.find_by(product_id: product.id).src.url, class: "CategoryPic"
+          .Products__info
+            %p.name
+              = product.name
+            .price
+              .price__left
+                = product.price
+                円
+              .price__right
+                ★
+                0
+            %p.tax (税込)
 
 .mainBrand
   .mainBrand__title
-    ピックアップブランド
+    ピックアップカテゴリー
   .mainBrand__sub
-    アーカイバ
+    レディース
   .mainBrand__wrapper
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "BrandPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "BrandPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "BrandPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
-
-    .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "BrandPic"
-      .Products__info
-        %p.name ee
-        .price
-          .price__left
-            1000円
-          .proce__right
-            ★
-            0
-        %p.tax (税込)
+    - @lady_product_array.first(4).each do |product|
+      = link_to product_path(product) do
+        .Products
+          = image_tag Image.find_by(product_id: product.id).src.url, class: "BrandPic"
+          .Products__info
+            %p.name
+              = product.name
+            .price
+              .price__left
+                = product.price
+                円
+              .proce__right
+                ★
+                0
+            %p.tax (税込)
