--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -44,8 +44,8 @@
         - if current_user == @product.user
           = link_to "商品の編集する", edit_product_path(@product.id), class: "item-buy"
         - else
-          = link_to "商品を購入する", "#", class: "item-buy"
-        .Explanation 
+          = link_to "商品を購入する", buy_product_orders_path(@product), class: "item-buy"
+        .Explanation
           = @product.item_info
         .table
           %table.table__box
@@ -84,7 +84,7 @@
                   = link_to "#{Region.find_by_id(@product.region_id).name}", "#", class: "tdlink"
               %tr
                 %th 発送日の目安
-                %td 
+                %td
                   = Day.find_by_id(@product.day_id).name
         .optional
           %ul.optional__Area
